 (Format: Year/Month/Day)
Changes for 1.0rc2:
*06/06/19:
   * Add EUC-KR to ko_KR encodings (Simon)
     nls/ko_KR/ Makefile.am generated-EUC-KR.m
   * Try ignoring NotifyUngrab EnterNotify events for focus (Simon)
     - should fix incorrect focus reverts when menus etc closed with 
       mouse focus, but possibly have side effects, do tell...)
     Window.cc
   * Fix menu placement issue with (vertical) xinerama (Simon)
     - note, doesn't fix "submenus open on wrong screen" issue, that requires
       some more serious data movement.
     FbTk/Menu.cc
   * Fix bug #1507671, clock not updating on multiple screens (Simon)
     - time() and gettimeofday() are inconsistent, only use gettimeofday
     - clean up Timer stuff a bit, fixed some other bugs
     FbTk/Timer.hh/cc ClockTool.cc
*06/06/18:
   * Fixed bug #1507754 iconbar text was not updated to match titlebar (Henrik)
     WinClient.cc
   * Added support for _NET_WM_WINDOW_TYPE_DIALOG and
     _NET_FRAME_EXTENTS (Henrik)
     src/Ewmh.hh/cc, fluxbox.hh/cc, Window.cc
   * Updated german translation (Thanks Michael Bueker m.bueker at berlin de)
     nls/de_DE/Translation.m
*06/06/16:
   * Fix crash when closing a window while cycling (Mark)
     FocusControl.cc
-------------------------------------------------------------
Changes for 1.0rc:
*06/06/11:
   * Added support for _NET_WM_MOVERESIZE (Henrik)
     Ewmh.hh/cc, Window.hh/cc
   * Added support for urgency hint.
     This make apps, that support this hint, flash the titlebar and iconbar
     when they want attention.
     For example gaim.
     (Thanks Mark Tiefenbruck)
     fluxbox.hh, Ewmh.hh/cc, WinClient.cc
*06/06/10:
   * Added new command: ToggleCmd
     Works like a macro but executes the commands one at the time in order.
     Example:
     Mod1 T :ToggleCmd {Exec xterm} {NextWindow}
     When Mod1 T is press the first time it will start xterm, the second time
     it will do NextWindow. When it reaches end it will start at the beginning.